syntax = "proto3";

package santiago.web.play;

import "models/BlueprintId.proto";
import "models/AvailableTags.proto";
import "models/AvailableGameData.proto";
import "google/protobuf/timestamp.proto";

message Blueprint {
  BlueprintId id = 1;
  string name = 2;
  AvailableGameData availableGameData = 3;
  AvailableTags availableTags = 4;
  repeated string availableThumbnailUrls = 5;
  AvailableTags availableProgressionModeTags = 6;
}