syntax = "proto3";

package santiago.web.play;

message BuildStatusError {
   string errorMessage = 1;
}