syntax = "proto3";

package santiago.web.play;

import "models/CompatibleModRules.proto";
import "models/IncompatibleModRules.proto";
import "models/ErrorModRules.proto";

message ModRules {
    CompatibleModRules compatibleRules = 1;
    IncompatibleModRules incompatibleRules = 2;
    ErrorModRules errorRules = 3;
}